k3s-cluster/kube-apps/manifests/homebridge/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homebridge
  labels:
    name: homebridge
