k3s-cluster/kube-apps/manifests/homebridge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebridge
  namespace: homebridge
  labels:
    app: homebridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: homebridge
        image: homebridge/homebridge:ubuntu
        ports:
        - containerPort: 8581
          name: web-ui
        volumeMounts:
        - name: homebridge-data
          mountPath: /homebridge
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
      volumes:
      - name: homebridge-data
        persistentVolumeClaim:
          claimName: homebridge-data
