k3s-cluster/kube-apps/manifests/homebridge/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homebridge
  namespace: homebridge
  labels:
    app: homebridge
spec:
  selector:
    app: homebridge
  ports:
  - name: web-ui
    port: 8581
    targetPort: 8581
    protocol: TCP
  type: ClusterIP
